swim_client/src/configuration/tests/resources/valid/default-config-manual.recon
@config {
    @downlink_connections {
        dl_req_buffer_size: 8,
        buffer_size: 128,
        yield_after: 256,
        retry_strategy: @exponential {
            max_interval: @duration {
                secs: 16,
                nanos: 0
            },
            max_backoff: @duration {
                secs: 300,
                nanos: 0
            }
        }
    },
    @remote_connections {
        router_buffer_size: 32,
        channel_buffer_size: 32,
        activity_timeout: @duration {
            secs: 30,
            nanos: 0
        },
        write_timeout: @duration {
            secs: 20,
            nanos: 0
        },
        connection_retries: @exponential {
            max_interval: @duration {
                secs: 16,
                nanos: 0
            },
            max_backoff: @duration {
                secs: 300,
                nanos: 0
            }
        },
        yield_after: 256
    },
    @websocket_connections {
        max_message_size: 67108864,
        max_frame_size: 16777216,
        accept_unmasked_frames: false,
        compression: @none {
            67108864
        }
    },
    @downlinks {
        default: @downlink_config {
            back_pressure: @propagate,
            idle_timeout: @duration {
                secs: 300,
                nanos: 0
            },
            buffer_size: 32,
            on_invalid: @terminate,
            yield_after: 256
        }
    }
}