swim_client/src/configuration/tests/resources/invalid/invalid-key.recon
@config {
    @downlinks {
        host: {
            "foo-url": @downlink_config {
                back_pressure: @propagate,
                idle_timeout: @duration {
                    secs: 40000,
                    nanos: 0
                },
                buffer_size: 15,
                on_invalid: @ignore,
                yield_after: 200
            }
        }
    }
}